// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__clearEvents should clear the list of events 1`] = `
Array [
  Object {
    "props": Object {},
    "type": "beginPath",
  },
]
`;

exports[`__clearEvents should not prevent additional events from being collected 1`] = `
Array [
  Object {
    "props": Object {},
    "type": "beginPath",
  },
  Object {
    "props": Object {
      "anticlockwise": false,
      "endAngle": 5,
      "radius": 3,
      "startAngle": 4,
      "x": 1,
      "y": 2,
    },
    "type": "arc",
  },
]
`;
